Version History
===============

Version 0.1.5
--------------
* receivertag.receiver is not limited to int
* change judge base class

Version 0.1.4
--------------
* client add view to judge whether has unread notice

Version 0.1.3
--------------
* client query notice can filter title

Version 0.1.2
--------------
* alter table noticestore.receiver_type_ids to allow notice can have many receiver type
* specify judge class kwargs
* add some resp fields

Version 0.1.1
--------------
* split client function
* judge class add kwargs argument

Version 0.1.0
--------------
* base